--- a/HCIProject/SubjectSchedule/SubjectSchedule/MainWindow.xaml
+++ b/HCIProject/SubjectSchedule/SubjectSchedule/MainWindow.xaml
@@ -10,6 +10,8 @@
     <DockPanel HorizontalAlignment="Left"  LastChildFill="False" VerticalAlignment="Top" Width="1300" Height="700" >
         <Grid  VerticalAlignment="Top" Margin="0,0,0,0" Width="1300" Height="700">
             <ToolBarTray HorizontalAlignment="Left" Height="36" VerticalAlignment="Top"/>
+            <Button  Click="Go_to_subjests" ToolTip="Show all subjests">
+            </Button>
             <Grid x:Name="ClassroomsList" HorizontalAlignment="Left" Height="658" Margin="0,13,0,0" VerticalAlignment="Top" Width="150">
                 <Canvas x:Name="ClassroomCanvas" HorizontalAlignment="Left" Height="628" VerticalAlignment="Top" Width="150" Margin="0,20,0,0"/>
             </Grid>
