--- a/HCIProject/SubjectSchedule/SubjectSchedule/Classrooms.xaml
+++ b/HCIProject/SubjectSchedule/SubjectSchedule/Classrooms.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="SubjectSchedule.Subjests"
+﻿<Window x:Class="SubjectSchedule.Classrooms"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SubjectSchedule"
         mc:Ignorable="d"
-        Title="Subjests" Height="700" Width="1300">
-
+        Title="Classrooms" Height="700" Width="1300">
     <DockPanel>
         <Grid>
             <Grid.RowDefinitions>
@@ -16,19 +15,16 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <DataGrid x:Name="dgSubs" Height="Auto" IsReadOnly="True" VerticalAlignment="Top" AutoGenerateColumns="False" ColumnWidth="Auto" IsSynchronizedWithCurrentItem="True"  Width="Auto" ItemsSource="{Binding Path=Subs}">
+            <DataGrid x:Name="dgSubs" Height="Auto" IsReadOnly="True" VerticalAlignment="Top" AutoGenerateColumns="False" ColumnWidth="Auto" IsSynchronizedWithCurrentItem="True"  Width="Auto" ItemsSource="{Binding Path=Classr}">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Oznaka"  Binding="{Binding Label}"></DataGridTextColumn>
                     <DataGridTextColumn Header="Naziv"  Binding="{Binding Name}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Kurs"  Binding="{Binding Course}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Opis"  Binding="{Binding Description}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Velicina grupe"  Binding="{Binding GroupSize}"></DataGridTextColumn>
-                    <DataGridTextColumn Header="Termini u danu"  Binding="{Binding PeriodNum}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Broj mesta"  Binding="{Binding NumbOfSpots}"></DataGridTextColumn>
                     <DataGridCheckBoxColumn Header="Projektor"  Binding="{Binding Projector}"></DataGridCheckBoxColumn>
                     <DataGridCheckBoxColumn Header="Tabla" Binding="{Binding Board}"></DataGridCheckBoxColumn>
                     <DataGridCheckBoxColumn Header="Pametna tabla" Binding="{Binding SmartBoard}"></DataGridCheckBoxColumn>
-                    <DataGridTextColumn Header="Operativni sistem" Binding="{Binding Os}"></DataGridTextColumn>
                     <DataGridTextColumn Header="Softver" Binding="{Binding Softvare}"></DataGridTextColumn>
+                    <DataGridTextColumn Header="Operativni sistem" Binding="{Binding Os}"></DataGridTextColumn>
                     <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate >
@@ -60,38 +56,28 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                     <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0">Oznaka</TextBlock>
                 <TextBlock Grid.Column="1" Grid.Row="0">Naziv</TextBlock>
-                <TextBlock Grid.Column="2" Grid.Row="0">Kurs</TextBlock>
-                <TextBlock Grid.Column="3" Grid.Row="0">Opis</TextBlock>
-                <TextBlock Grid.Column="4" Grid.Row="0">Velicina grupe</TextBlock>
-                <TextBlock Grid.Column="5" Grid.Row="0">Termini u danu</TextBlock>
-                <TextBlock Grid.Column="6" Grid.Row="0">Projektor</TextBlock>
-                <TextBlock Grid.Column="7" Grid.Row="0">Tabla</TextBlock>
-                <TextBlock Grid.Column="8" Grid.Row="0">Pametna tabla</TextBlock>
-                <TextBlock Grid.Column="9" Grid.Row="0">Operativni sistem</TextBlock>
-                <TextBlock Grid.Column="10" Grid.Row="0">Softver</TextBlock>
+                <TextBlock Grid.Column="2" Grid.Row="0">Broj mesta</TextBlock>
+                <TextBlock Grid.Column="3" Grid.Row="0">Projektor</TextBlock>
+                <TextBlock Grid.Column="4" Grid.Row="0">Tabla</TextBlock>
+                <TextBlock Grid.Column="5" Grid.Row="0">Pametna tabla</TextBlock>
+                <TextBlock Grid.Column="6" Grid.Row="0">Softver</TextBlock>
+                <TextBlock Grid.Column="7" Grid.Row="0">Operativni sistem</TextBlock>
 
                 <TextBox x:Name="a1" Grid.Column="0" Grid.Row="0"></TextBox>
                 <TextBox x:Name="a2" Grid.Column="1" Grid.Row="0"></TextBox>
                 <TextBox x:Name="a3" Grid.Column="2" Grid.Row="0"></TextBox>
-                <TextBox x:Name="a4" Grid.Column="3" Grid.Row="0"></TextBox>
-                <TextBox x:Name="a5" Grid.Column="4" Grid.Row="0"></TextBox>
-                <TextBox x:Name="a6" Grid.Column="5" Grid.Row="0"></TextBox>
-                <CheckBox x:Name="a7" Grid.Column="6" Grid.Row="0"></CheckBox>
-                <CheckBox x:Name="a8" Grid.Column="7" Grid.Row="0"></CheckBox>
-                <CheckBox x:Name="a9" Grid.Column="8" Grid.Row="0"></CheckBox>
-                <TextBox x:Name="a10" Grid.Column="9" Grid.Row="0"></TextBox>
-                <TextBox x:Name="a11" Grid.Column="10" Grid.Row="0"></TextBox>
-                <Button Grid.Column="11" Grid.Row="0" Click="Button_Click_4">Dodaj predmet</Button>
+                <CheckBox x:Name="a4" Grid.Column="3" Grid.Row="0"></CheckBox>
+                <CheckBox x:Name="a5" Grid.Column="4" Grid.Row="0"></CheckBox>
+                <CheckBox x:Name="a6" Grid.Column="5" Grid.Row="0"></CheckBox>
+                <TextBox x:Name="a7" Grid.Column="6" Grid.Row="0"></TextBox>
+                <TextBox x:Name="a8" Grid.Column="7" Grid.Row="0"></TextBox>
+                <Button Grid.Column="8" Grid.Row="0" Click="Button_Click_4">Dodaj ucionicu</Button>
             </Grid>
             <Grid x:Name="changeGrid" Grid.Row="1" DataContext="{Binding ElementName=dgSubs,Path=SelectedItem}" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -105,21 +91,19 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Grid.Row="0">Termini u danu:</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="1">Projektor:</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="2">Tabla:</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="3">Pametna tabla:</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="0">Projektor:</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="1">Tabla:</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="2">Pametna tabla:</TextBlock>
+                <TextBlock Grid.Column="0" Grid.Row="3">Softver:</TextBlock>
                 <TextBlock Grid.Column="0" Grid.Row="4">Operativni sistem:</TextBlock>
-                <TextBlock Grid.Column="0" Grid.Row="5">Softver:</TextBlock>
 
-                <TextBox x:Name="periodNum" Grid.Column="1" Grid.Row="0" Text="{Binding Path=PeriodNum}"></TextBox>
-                <CheckBox x:Name="projector" Grid.Column="1" Grid.Row="1" IsChecked="{Binding Path=Projector}"/>
-                <CheckBox x:Name="board" Grid.Column="1" Grid.Row="2" IsChecked="{Binding Path=Board}"/>
-                <CheckBox x:Name="sBoard" Grid.Column="1" Grid.Row="3" IsChecked="{Binding Path=SmartBoard}"/>
-                <TextBox x:Name="osis" Grid.Column="1" Grid.Row="4" Text="{Binding Path=Os}"></TextBox>
-                <TextBox x:Name="soft" Grid.Column="1" Grid.Row="5" Text="{Binding Path=Softvare}"></TextBox>
-                <Button Grid.Row="6" Click="Button_Click_1">Potvrdi izmene</Button>
-                <Button Grid.Row="7" Click="Button_Click_2">Otkazi izmene</Button>
+                <CheckBox x:Name="projector" Grid.Column="1" Grid.Row="0" IsChecked="{Binding Path=Projector}"/>
+                <CheckBox x:Name="board" Grid.Column="1" Grid.Row="1" IsChecked="{Binding Path=Board}"/>
+                <CheckBox x:Name="sBoard" Grid.Column="1" Grid.Row="2" IsChecked="{Binding Path=SmartBoard}"/>
+                <TextBox x:Name="osis" Grid.Column="1" Grid.Row="3" Text="{Binding Path=Softvare}"></TextBox>
+                <TextBox x:Name="soft" Grid.Column="1" Grid.Row="4" Text="{Binding Path=Os}"></TextBox>
+                <Button Grid.Row="5" Click="Button_Click_1">Potvrdi izmene</Button>
+                <Button Grid.Row="6" Click="Button_Click_2">Otkazi izmene</Button>
             </Grid>
 
         </Grid>
